// GitGud Database Schema
// Generated for dbdiagram.io
// Authentication is handled by Keycloak - users table only stores application data
// All IDs use UUID for security and distributed-friendly design

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  keycloak_id varchar(255) [not null, unique, note: 'UUID from Keycloak']
  email varchar(255) [not null, unique]
  username varchar(100) [not null, unique]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    keycloak_id
    email
    username
  }
}

Table user_stats {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, unique, ref: - users.id]
  total_xp bigint [not null, default: 0]
  current_level int [not null, default: 1]
  xp_to_next_level bigint [not null, default: 100]
  current_streak_days int [not null, default: 0]
  longest_streak_days int [not null, default: 0]
  last_activity_date date
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    current_level
    total_xp
  }
}

Table user_profiles {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, unique, ref: - users.id]
  display_name varchar(100)
  avatar_url varchar(500)
  bio text
  is_public boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    user_id
  }
}

Table modules {
  id uuid [pk, default: `gen_random_uuid()`]
  title varchar(200) [not null]
  description text
  difficulty varchar(50) [not null, note: 'BEGINNER, INTERMEDIATE, ADVANCED']
  required_level int [not null, default: 1]
  estimated_time_minutes int
  display_order int [not null, default: 0]
  is_published boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    display_order
    difficulty
    is_published
  }
}

Table lessons {
  id uuid [pk, default: `gen_random_uuid()`]
  module_id uuid [not null, ref: > modules.id]
  title varchar(200) [not null]
  description text
  content text [note: 'Markdown content for lesson instructions']
  lesson_type varchar(50) [not null, note: 'TUTORIAL, CHALLENGE, PROJECT']
  xp_reward int [not null, default: 10]
  difficulty varchar(50) [not null, note: 'EASY, MEDIUM, HARD']
  starter_code text
  solution_code text [note: 'Hidden from users']
  display_order int [not null, default: 0]
  is_published boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    module_id
    display_order
    difficulty
    is_published
  }
}

Table user_progress {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  lesson_id uuid [not null, ref: > lessons.id]
  status varchar(50) [not null, default: 'NOT_STARTED', note: 'NOT_STARTED, IN_PROGRESS, COMPLETED']
  attempts_count int [not null, default: 0]
  best_score int
  started_at timestamp
  completed_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    lesson_id
    status
    (user_id, lesson_id) [unique]
  }
}

Table achievements {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null, unique]
  description text
  icon_url varchar(500)
  criteria_json text [note: 'JSON describing achievement criteria']
  xp_reward int [not null, default: 0]
  rarity varchar(50) [not null, note: 'COMMON, RARE, EPIC, LEGENDARY']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    name
    rarity
  }
}

Table user_achievements {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  achievement_id uuid [not null, ref: > achievements.id]
  earned_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    achievement_id
    (user_id, achievement_id) [unique]
    earned_at
  }
}

Table submissions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  lesson_id uuid [not null, ref: > lessons.id]
  code text [not null]
  status varchar(50) [not null, note: 'PENDING, RUNNING, PASSED, FAILED, ERROR']
  passed_tests int
  total_tests int
  execution_time_ms bigint
  error_message text
  console_output text
  xp_awarded int
  submitted_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    lesson_id
    status
    submitted_at
  }
}

Table test_cases {
  id uuid [pk, default: `gen_random_uuid()`]
  lesson_id uuid [not null, ref: > lessons.id]
  input text
  expected_output text
  is_hidden boolean [not null, default: false, note: 'Hidden test cases not shown to users']
  weight int [not null, default: 1, note: 'Point value of test case']
  display_order int [not null, default: 0]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    lesson_id
    display_order
  }
}
